@@ -33,7 +33,6 @@ import java.io.IOException;
 import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -48,8 +47,10 @@ public abstract class FormatterTest {
 
     // TODO: Add test cases for syntax error scenarios as well
 
-    private final Path resourceDirectory = Paths.get("src").resolve("test").resolve("resources").toAbsolutePath();
-    private Path buildDirectory = Paths.get("build").toAbsolutePath().normalize();
+
+    private final Path resourceDirectory = Path.of("src/test/resources").toAbsolutePath();
+    private final Path buildDirectory = Path.of("build").toAbsolutePath().normalize();
+
     private static final String ASSERT_DIR = "assert";
     private static final String SOURCE_DIR = "source";
 
@@ -61,8 +62,8 @@ public abstract class FormatterTest {
      */
     @Test(dataProvider = "test-file-provider")
     public void test(String source, String sourcePath) throws IOException {
-        Path assertFilePath = Paths.get(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
-        Path sourceFilePath = Paths.get(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
+        Path assertFilePath = Path.of(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
+        Path sourceFilePath = Path.of(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
         String content = getSourceText(sourceFilePath);
         TextDocument textDocument = TextDocuments.from(content);
         SyntaxTree syntaxTree = SyntaxTree.from(textDocument);
@@ -75,10 +76,10 @@ public abstract class FormatterTest {
     }
 
     public void testWithConfigurationFile(String source, String sourcePath) throws IOException, FormatterException {
-        Path sourceDir = Paths.get(resourceDirectory.toString(), sourcePath, SOURCE_DIR);
-        Path sourceFilePath = Paths.get(sourceDir.toString(), source);
-        Path assertFilePath = Paths.get(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
-        Path tomlPath = Paths.get(sourceDir.toString(), ProjectConstants.BALLERINA_TOML);
+        Path sourceDir = Path.of(resourceDirectory.toString(), sourcePath, SOURCE_DIR);
+        Path sourceFilePath = Path.of(sourceDir.toString(), source);
+        Path assertFilePath = Path.of(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
+        Path tomlPath = Path.of(sourceDir.toString(), ProjectConstants.BALLERINA_TOML);
         String content = getSourceText(sourceFilePath);
         TextDocument textDocument = TextDocuments.from(content);
         String tomlContent = Files.readString(tomlPath);
@@ -95,8 +96,8 @@ public abstract class FormatterTest {
     }
 
     public void testWithOptions(String source, String sourcePath) throws IOException {
-        Path assertFilePath = Paths.get(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
-        Path sourceFilePath = Paths.get(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
+        Path assertFilePath = Path.of(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
+        Path sourceFilePath = Path.of(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
         String content = getSourceText(sourceFilePath);
         TextDocument textDocument = TextDocuments.from(content);
         SyntaxTree syntaxTree = SyntaxTree.from(textDocument);
@@ -112,8 +113,8 @@ public abstract class FormatterTest {
 
     public void testWithCustomOptions(String source, String sourcePath, FormattingOptions formattingOptions)
             throws IOException {
-        Path assertFilePath = Paths.get(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
-        Path sourceFilePath = Paths.get(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
+        Path assertFilePath = Path.of(resourceDirectory.toString(), sourcePath, ASSERT_DIR, source);
+        Path sourceFilePath = Path.of(resourceDirectory.toString(), sourcePath, SOURCE_DIR, source);
         String content = getSourceText(sourceFilePath);
         TextDocument textDocument = TextDocuments.from(content);
         SyntaxTree syntaxTree = SyntaxTree.from(textDocument);
@@ -131,7 +132,7 @@ public abstract class FormatterTest {
      * @param sourcePath Source path of the parser test
      */
     public void testParserResources(String sourcePath) throws IOException {
-        Path filePath = Paths.get(sourcePath);
+        Path filePath = Path.of(sourcePath);
         String content = getSourceText(filePath);
         TextDocument textDocument = TextDocuments.from(content);
         SyntaxTree syntaxTree = SyntaxTree.from(textDocument);
@@ -210,7 +211,7 @@ public abstract class FormatterTest {
             return this.testSubset();
         }
         List<String> skippedTests = this.skipList();
-        try (Stream<Path> testPaths = Files.walk(this.buildDirectory.resolve("resources").resolve("test")
+        try (Stream<Path> testPaths = Files.walk(this.buildDirectory.resolve("resources/test")
                                 .resolve(this.getTestResourceDir()))) {
             return testPaths.filter(path -> {
                         File file = path.toFile();
