@@ -28,7 +28,7 @@ import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -61,7 +61,7 @@ public final class FileUtils {
         matcher.appendTail(stringBuilder);
 
 
-        File jsonFile = new File(Paths.get(targetPath.getValue()).toString());
+        File jsonFile = new File(Path.of(targetPath.getValue()).toString());
         jsonFile.getParentFile().mkdirs();
         FileOutputStream fileOutputStream = new FileOutputStream(jsonFile);
         try (Writer writer = new OutputStreamWriter(fileOutputStream, StandardCharsets.UTF_8)) {
@@ -73,7 +73,7 @@ public final class FileUtils {
     public static BString readContent(BString targetPath) {
         if (fileExists(targetPath)) {
             try {
-                String readString = Files.readString(Paths.get(targetPath.getValue()));
+                String readString = Files.readString(Path.of(targetPath.getValue()));
                 return StringUtils.fromString(readString);
             } catch (IOException e) {
                 throw ErrorHelper.getRuntimeException(ErrorCodes.OPERATION_NOT_SUPPORTED_ERROR);
@@ -83,6 +83,6 @@ public final class FileUtils {
     }
 
     public static boolean fileExists(BString filePath) {
-        return Files.exists(Paths.get(filePath.getValue()));
+        return Files.exists(Path.of(filePath.getValue()));
     }
 }
